# p2p-chat

./: .dockerignore  .gitignore  AGENT.md  Cargo.toml  build_errors.txt  build_errors_media.txt  docker-compose.yml  package-lock.json
apps/desktop/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tauri_api_install.txt  tauri_log.txt
apps/desktop/src/: App.tsx  crypto.ts  index.css  main.rs  store.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: backoff.rs  config.rs  error.rs  main.rs  observability.rs  protocol.rs  signaling.rs  updater.rs
apps/desktop/src-tauri/src/api/: auth.rs  chat.rs  friends.rs  mod.rs  servers.rs  users.rs
apps/desktop/src-tauri/src/messaging/: domain.rs  error.rs  mod.rs  service.rs  storage.rs
apps/desktop/src/app/: AppRoutes.tsx  useAppLifecycle.ts
apps/desktop/src/components/: AppUpdateNotice.tsx  AuthScreen.tsx  CallOverlay.tsx  ChannelList.tsx  FriendsList.tsx  IncomingCallModal.tsx  MemberList.tsx  MessageContent.tsx  SafeCallOverlay.tsx  ServerSidebar.tsx
apps/desktop/src/features/dm/components/: DmCommandHints.tsx  DmComposer.tsx  DmConversation.tsx  DmFriendInfoPanel.tsx  DmMessageList.tsx  DmMessageRow.tsx  DmNoSelectionState.tsx  DmSidebar.tsx
apps/desktop/src/features/dm/constants/: slashCommands.ts
apps/desktop/src/features/dm/hooks/: useDmAutoScroll.ts  useDmTypingEmitter.ts
apps/desktop/src/features/server/components/: ServerChatMessageRow.tsx  ServerChatView.tsx
apps/desktop/src/hooks/: useActiveRoomReadReceipt.ts  useAppStartup.ts  useCallEvents.ts  useOutgoingCallTimeout.ts  usePollingFallback.ts  useWebSocketEvents.ts
apps/desktop/src/layouts/: AppShell.tsx
apps/desktop/src/pages/: DmPage.tsx  ServerPage.tsx
apps/desktop/src/services/: updateService.ts
apps/desktop/src/services/messages/: status.ts
apps/desktop/src/types/: index.ts
apps/server/: Cargo.toml  Dockerfile
apps/server/migrations/: 20260124000001_init.sql  20260127000001_servers.sql  20260127000002_fix_messages_room_id.sql  20260212000001_message_editing.sql  20260213000001_message_sync_and_receipts.sql  20260213000002_voice_channel_presence.sql  20260213000003_feature_pack.sql
apps/server/src/: auth.rs  main.rs  models.rs  state.rs  validation.rs
apps/server/src/routes/: app.rs  auth.rs  chat.rs  friends.rs  mod.rs  servers.rs  users.rs
docs/: app-updates.md  cache-reset.md  feature-pack-20260213.md  messaging-lifecycle.md  voice-calls.md
libs/media/: Cargo.toml
libs/media/src/: audio.rs  crypto.rs  lib.rs
libs/shared-proto/: Cargo.toml
libs/shared-proto/src/: lib.rs
scripts/: clean-macos.sh  clean-windows.ps1  clean.js  generate-ico.js
