[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
shared-proto = { path = "../../libs/shared-proto" }
tauri = { version = "2.0.0-beta", features = [] }

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
