[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
shared-proto = { path = "../../libs/shared-proto" }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }

