[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
cpal = "0.15"
audiopus = "0.3.0-rc.0"
webrtc = { version = "0.11", features = [] }
xcap = "0.0.9"
ring = "0.17"
rand = "0.8"
base64 = "0.22"
