[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
cpal = "0.15"
audiopus = "0.3.0-rc.0"
webrtc = { version = "0.14.0", default-features = true }
xcap = "0.0.9"
ring = "0.17"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
