[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
shared-proto = { path = "../../../libs/shared-proto" }
media = { path = "../../../libs/media" }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
